# knxd

./: .mailmap  AUTHORS  CMakeLists.txt  bootstrap.sh  config.h.in
.github/workflows/: ci.yml
debian/: changelog
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  ft12.cpp  ft12.h  ncn5120.cpp  tpuart.cpp  tpuart.h
src/client/: CMakeLists.txt
src/client/c/: CMakeLists.txt
src/client/cs/: CMakeLists.txt
src/client/java/: CMakeLists.txt
src/client/lua/: CMakeLists.txt
src/client/pascal/: CMakeLists.txt
src/client/perl/: CMakeLists.txt
src/client/php/: CMakeLists.txt
src/client/python/: CMakeLists.txt
src/client/ruby/: CMakeLists.txt
src/common/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/include/: CMakeLists.txt
src/libserver/: CMakeLists.txt  emi2.cpp  llserial.cpp  llserial.h  lowlevel.cpp
src/server/: CMakeLists.txt  knxd.cpp
src/tools/: CMakeLists.txt
src/tools/bcu/: CMakeLists.txt  bcuaddrtab.cpp  bcuread.cpp
src/tools/eibnet/: CMakeLists.txt
src/usb/: CMakeLists.txt
